fix of footer alignment in social media links"

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -43,6 +43,12 @@ footer {
   gap: 0.5rem;
 }
 
+.textSocialMedia {
+  display: flex;
+  align-items: center; 
+  margin-bottom: 1rem;
+}
+
 .SocialMediaLogos {
   height: 15px;
 }
